fix Travis Permian space error